# digitaltest

./: README.md  package.json  pyproject.toml  replit.md  run_app.py  test_expand.py  test_rank.py
app/: __init__.py  config.py  deps.py  evidence.py  llm_client.py  main.py  models.py  prompts.py  rank.py  scrape.py  search.py  synth.py  utils.py
app/static/: styles.css
app/templates/: base.html  index.html  privacy.html
app/templates/components/: answer.html  research_log.html  sources.html
client/src/: index.css
client/src/pages/: home.tsx
server/: research_runner.py  routes.ts  vite.ts
server/research/: __init__.py  config.py  content_extractor.py  json_parser.py  models.py  query_analyzer.py  research_engine.py  search_engine.py  synthesizer.py
shared/: research-schema.ts
tests/: __init__.py  test_routes.py
